@@ -1,6 +1,14 @@
 2011-09-19  WOnder93  <omosnacek@gmail.com>
 
 	* AssemblyInfo.cs:
+	  
+
+	* Server.cs:
+	  Tiny IO improvements.
+
+2011-09-19  WOnder93  <omosnacek@gmail.com>
+
+	* AssemblyInfo.cs:
 	* Bang# Server Daemon.csproj:
 	  
 
